Added first version of site data

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,4 +1,4 @@
-{{> header title='App Landing Page'}}
+{{> header title='On Farm Water'}}
 
 <div class="inner">
   {{> section-fold }}
@@ -6,9 +6,9 @@
 </div>
 
 <div class="lower">
-  {{> section-chat }}
-  {{> section-stats }}
-  {{> section-testimonials }}
+  {{!-- {{> section-chat }} --}}
+  {{!-- {{> section-stats }} --}}
+  {{!-- {{> section-testimonials }} --}}
 </div>
 
 <div class="inner">
