--- a/src/partials/section-about.hbs
+++ b/src/partials/section-about.hbs
@@ -1,23 +1,25 @@
 <div class="about">
-  <h2 class="about__header" id="about">About Our App</h3>
 
-  <h3 class="about__sub-header">Awesome features to convince you to use our mobile app</h3>
+  <h2 class="about__header" id="about">About On Farm Water</h3>
 
-  <div class="row features">
-    <div class="four columns">
-      {{> icon gradient=true img="images/stats-icon.svg" }}
-      <h4 class="features__header">Follow your stats</h4>
-      <p class="features__desc">This is simply dummy text of the printing and typesetting industry.</p>
+    <h3 class="about__sub-header">Manage your irrigation schedule with a breeze using drag and drop</h3>
+
+    <div class="row features">
+      <div class="four columns">
+        {{> icon gradient=true img="images/stats-icon.svg" }}
+        <h4 class="features__header">Easy Drag and Drop</h4>
+        <p class="features__desc">Using an intuitive drag and drop interface allows schedules to be created and changed
+          quickly.</p>
+      </div>
+      <div class="four columns">
+        {{> icon gradient=false img="images/chat-icon.svg" }}
+        <h4 class="features__header">Live data</h4>
+        <p class="features__desc">No need to sync! All the data is saved live and shared across devices.</p>
+      </div>
+      <div class="four columns">
+        {{> icon gradient=false img="images/smartphone-icon.svg" }}
+        <h4 class="features__header">Print your schedule</h4>
+        <p class="features__desc">On the go all the time? Print your irrigation schedule from your phone!</p>
+      </div>
     </div>
-    <div class="four columns">
-      {{> icon gradient=false img="images/chat-icon.svg" }}
-      <h4 class="features__header">Chat with co-workers</h4>
-      <p class="features__desc">It is a long established fact that a reader will be distracted by the.</p>
-    </div>
-    <div class="four columns">
-      {{> icon gradient=false img="images/smartphone-icon.svg" }}
-      <h4 class="features__header">Smartphone compatible</h4>
-      <p class="features__desc">There are many variations of passages of Lorem Ipsum </p>
-    </div>
-  </div>
 </div>
