--- a/src/partials/section-fold.hbs
+++ b/src/partials/section-fold.hbs
@@ -1,9 +1,8 @@
-
 <div class="row" class="top-fold">
   <div class="top-fold__wrapper five columns">
 
-    <h2 class="top-fold__title">Stay connected with friends</h2>
-    <h3 class="top-fold__subtitle">Create amazing landing page quickly.</h3>
+    <h2 class="top-fold__title">Irrigation scheduling from anywhere!</h2>
+    <h3 class="top-fold__subtitle">Manage schedules easier than ever.</h3>
 
     {{> button text="Get started" gradient=true }}
 
@@ -16,6 +15,6 @@
   </div>
 
   <div class="columns seven iphone">
-    <img class="iphone__img" src="images/iphone.png" alt="iPhone X">
+    <img class="iphone__img" src="images/mockup.png" alt="iPhone X">
   </div>
 </div>
