--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,21 +1,22 @@
-  <footer>
-    <div class="row">
-      <div class="columns six copyright">
-        <h3 class="copyright__name">App Landing Page</h3>
-        <p class="copyright__details">Copyright © Your Company <br /> All rights reserved</p>
-      </div>
-      <div class="columns six footer-nav">
-        <ul>
-          <li><a href="#chat">Chat</a></li>
-          <li><a href="#stats">Statistics</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li>{{> button text="Get started" gradient=true }}</li>
-        </ul>
-      </div>
+<footer>
+  <div class="row">
+    <div class="columns six copyright">
+      <h3 class="copyright__name">On Farm Water</h3>
+      <p class="copyright__details">Copyright © Deep Root Technology <br /> All rights reserved</p>
     </div>
-  </footer>
+    <div class="columns six footer-nav">
+      <ul>
+        {{!-- <li><a href="#chat">Chat</a></li>
+        <li><a href="#stats">Statistics</a></li>
+        <li><a href="#testimonials">Testimonials</a></li> --}}
+        <li>{{> button text="Get started" gradient=true }}</li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
-    </main>
-    <script src="js/bundle.js"></script>
-  </body>
+</main>
+<script src="js/bundle.js"></script>
+</body>
+
 </html>
