--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{title}}</title>
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
 
-    <meta property="ogdescription" content="">
-    <meta property="ogsite_name" content="">
-    <meta property="ogtitle" content="">
-    <meta property="ogtype" content="website">
-    <meta property="ogurl" content="">
+<head>
+  <meta charset="utf-8">
+  <title>{{title}}</title>
+  <meta name="viewport" content="width=device-width">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
-    <meta name="twittercard" content="summary">
-    <meta name="twittersite" content="">
-    <meta name="twittertitle" content="">
-    <meta name="twitterdescription" content="">
-    <meta name="twitterdomain" content="">
+  <meta property="ogdescription" content="">
+  <meta property="ogsite_name" content="">
+  <meta property="ogtitle" content="">
+  <meta property="ogtype" content="website">
+  <meta property="ogurl" content="">
 
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="">
-    <link rel="apple-touch-icon" href="" sizes="120x120">
+  <meta name="twittercard" content="summary">
+  <meta name="twittersite" content="">
+  <meta name="twittertitle" content="">
+  <meta name="twitterdescription" content="">
+  <meta name="twitterdomain" content="">
 
-    <!-- Stylesheets -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
+  <!-- Favicons -->
+  <link rel="shortcut icon" href="">
+  <link rel="apple-touch-icon" href="" sizes="120x120">
+
+  <!-- Stylesheets -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
 
   <div class="header inner">
 
     <div class="row">
       <div class="logo ten columns">
-        <h1>App Landing Page</h1>
-        </div>
-      <div class="two columns">{{> menu }}</div>
+        <h1>On Farm Water</h1>
+      </div>
+      {{!-- {{> button onclick= text="Contact Us" gradient=true }} --}}
+      <a href="mailto:emery@deeproottechnology.com" target="_top">Contact Us</a>
+      {{!-- <div class="two columns">{{> menu }}</div> --}}
     </div>
 
   </div>
 
-    <main class="main">
+  <main class="main">
