--- a/src/scss/components/section-fold.scss
+++ b/src/scss/components/section-fold.scss
@@ -4,7 +4,7 @@
   }
   &__title {
     font: font(x-large);
-    margin-bottom: ws(x-small)
+    margin-bottom: ws(x-small);
   }
 
   &__subtitle {
@@ -12,12 +12,11 @@
     color: color(saphire);
     margin-bottom: 30px;
   }
-
 }
 
 .iphone {
   &__img {
-    width: 300px;
+    width: 400px;
   }
 }
 
@@ -36,7 +35,7 @@
     }
   }
   &__arrow {
-    color: #CDD0D8;
+    color: #cdd0d8;
   }
   &:hover {
     cursor: pointer;
@@ -52,14 +51,14 @@
   .down {
     display: inline;
     &__arrow-wrap {
-     margin-top: 10rem;
+      margin-top: 20rem;
     }
   }
   .iphone {
     &__img {
       position: relative;
       left: 5rem;
-      width: 400px;
+      width: 700px;
     }
   }
 }
@@ -70,7 +69,7 @@
     width: 100%;
     height: 100%;
 
-    background: url('../images/pattern01.svg') no-repeat bottom right;
+    background: url("../images/pattern01.svg") no-repeat bottom right;
     background-size: contain;
   }
 }
