Added link to appstore

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,8 +1,10 @@
 {{> header title='On Farm Water'}}
-
+{{!-- {{> menu }} --}}
 <div class="inner">
+
   {{> section-fold }}
   {{> section-about }}
+
 </div>
 
 <div class="lower">
