--- a/src/partials/button.hbs
+++ b/src/partials/button.hbs
@@ -1,3 +1,4 @@
-<button class="btn {{#if gradient}}btn--grad{{/if}} {{#if pink}}btn--pink{{/if}}">
+<button class="btn {{#if gradient}}btn--grad{{/if}} {{#if pink}}btn--pink{{/if}}"
+  onclick="window.open('https://apps.apple.com/us/app/on-farm-water/id1525843729')">
   {{text}}
 </button>
